--- a/app/views/articles/index.slim
+++ b/app/views/articles/index.slim
@@ -2,4 +2,5 @@ h1 Articles
 ul
   - @articles.each do |article|
     li
-      = article.title
+      a href="/articles/#{article.id}"
+        = article.title
