--- a/app/views/articles/index.slim
+++ b/app/views/articles/index.slim
@@ -2,5 +2,4 @@ h1 Articles
 ul
   - @articles.each do |article|
     li
-      a href="/articles/#{article.id}"
-        = article.title
+      = link_to article.title, article
