--- a/app/views/articles/show.slim
+++ b/app/views/articles/show.slim
@@ -5,3 +5,6 @@ p = @article.body
 ul
   li
     = link_to 'Edit', edit_article_path(@article)
+  li
+    = link_to 'Destroy', article_path(@article), method: :delete, data: { confirm: 'Are you sure?' }
+
