--- a/app/views/articles/show.slim
+++ b/app/views/articles/show.slim
@@ -9,28 +9,10 @@ ul
     = link_to 'Destroy', article_path(@article), method: :delete, data: { confirm: 'Are you sure?' }
 
 h2 Comments
-- @article.comments.each do |comment|
-  p
-    strong Commenter : 
-    = comment.commenter
-  p
-    strong Comment : 
-    = comment.body
+= render @article.comments
 
 h2 Add a comment:
-= form_with model: [ @article, @article.comments.build ] do |form|
-    p
-      div
-        = form.label :commenter
-      div
-        = form.text_field :commenter
-    p
-      div
-        = form.label :body
-      div
-        = form.text_area :body
-    p
-      = form.submit
+= render 'comments/form'
 
 = link_to 'Edit', edit_article_path(@article)
 |  | 
