--- a/app/views/articles/_form.slim
+++ b/app/views/articles/_form.slim
@@ -16,5 +16,11 @@
         = msg
 
     div
+      div
+        = form.label :status
+      div
+        = form.select :status, Article::VALID_STATUSES, selected: article.status || 'public'
+
+    div
       = form.submit
 
