--- a/app/views/articles/index.slim
+++ b/app/views/articles/index.slim
@@ -1,7 +1,11 @@
 h1 Articles
+
+Our blog has #{Article.public_count} articles and counting!!!
+
 ul
   - @articles.each do |article|
-    li
-      = link_to article.title, article
+    - unless article.archived?
+      li
+        = link_to article.title, article
 
 = link_to 'New Article', new_article_path
