--- a/app/views/comments/_form.slim
+++ b/app/views/comments/_form.slim
@@ -10,4 +10,9 @@
       div
         = form.text_area :body
     p
+      div
+        = form.label :status
+      div
+        = form.select :status, Comment::VALID_STATUSES, selected: 'public'
+    p
       = form.submit
