--- a/app/views/comments/_comment.slim
+++ b/app/views/comments/_comment.slim
@@ -4,3 +4,7 @@ p
 p
   strong Comment : 
   = comment.body
+
+p
+  = link_to 'Destroy', [comment.article, comment], method: :delete, data: { confirm: 'Are you sure?' }
+
